Fixes a horizontal scroll on mobile & tablet

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -58,6 +58,7 @@ body {
 
 main {
   display: block;
+  overflow: hidden;
 
   &:focus {
     outline: 0;
